--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 }
 
 // In this section you declare where to find the dependencies of your project
@@ -28,3 +31,5 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
+apply plugin: 'application'
+mainClassName = "edu.handong.csee.java.countingChat.Runner"
